-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 11, 15
-
Component/s: hotspot
-
b09
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8240798 | 14.0.2 | Roland Westrelin | P4 | Resolved | Fixed | b01 |
| JDK-8246664 | 13.0.4 | Roland Westrelin | P4 | Resolved | Fixed | b04 |
| JDK-8239229 | 11.0.8-oracle | Roland Westrelin | P4 | Resolved | Fixed | b01 |
| JDK-8240356 | 11.0.8 | Roland Westrelin | P4 | Resolved | Fixed | b01 |
| JDK-8248627 | openjdk8u272 | Roland Westrelin | P4 | Resolved | Fixed | b01 |
$ cd test/hotspot/jtreg/testlibrary/ctw
$ make
$ cd dist
$ wget https://repo1.maven.org/maven2/com/liferay/com.liferay.wiki.service/2.0.8/com.liferay.wiki.service-2.0.8.jar
$ JAVA_OPTIONS="-XX:+AbortVMOnCompilationFailure -XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC -XX:+ShenandoahVerifyOptoBarriers" ./ctw.sh com.liferay.wiki.service-2.0.8.jar
# Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/compiler/compileBroker.cpp:2009), pid=18437, tid=18447
# fatal error: Not compilable at tier 4: malformed control flow
#
# JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.shade.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc.shade.jdk-jdk, mixed mode, sharing, tiered, compressed oops, shenandoah gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x882133] CompileBroker::post_compile(CompilerThread*, CompileTask*, bool, ciEnv*, int, char const*)+0x1b3
It looks Shenandoah-specific, as I could not get it to fail with G1. (It requires additional -XX:MaxNodeLimit=240000 -XX:NodeLimitFudgeFactor=6000 to get past the node limits).
$ make
$ cd dist
$ wget https://repo1.maven.org/maven2/com/liferay/com.liferay.wiki.service/2.0.8/com.liferay.wiki.service-2.0.8.jar
$ JAVA_OPTIONS="-XX:+AbortVMOnCompilationFailure -XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC -XX:+ShenandoahVerifyOptoBarriers" ./ctw.sh com.liferay.wiki.service-2.0.8.jar
# Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/compiler/compileBroker.cpp:2009), pid=18437, tid=18447
# fatal error: Not compilable at tier 4: malformed control flow
#
# JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.shade.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc.shade.jdk-jdk, mixed mode, sharing, tiered, compressed oops, shenandoah gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x882133] CompileBroker::post_compile(CompilerThread*, CompileTask*, bool, ciEnv*, int, char const*)+0x1b3
It looks Shenandoah-specific, as I could not get it to fail with G1. (It requires additional -XX:MaxNodeLimit=240000 -XX:NodeLimitFudgeFactor=6000 to get past the node limits).
- backported by
-
JDK-8239229 CTW: C2 compilation fails with "malformed control flow"
-
- Resolved
-
-
JDK-8240356 CTW: C2 compilation fails with "malformed control flow"
-
- Resolved
-
-
JDK-8240798 CTW: C2 compilation fails with "malformed control flow"
-
- Resolved
-
-
JDK-8246664 CTW: C2 compilation fails with "malformed control flow"
-
- Resolved
-
-
JDK-8248627 CTW: C2 compilation fails with "malformed control flow"
-
- Resolved
-
- links to
-
Commit
openjdk/panama-foreign/f2b7509d
(1 links to)