8237951: CTW: C2 compilation fails with "malformed control flow"

Reviewed-by: vlivanov, kvn